fixtures/valid/todo-basic.crumb
BEGIN CRUMB
v=1.1
kind=todo
title=Sprint backlog
source=cli
---
[tasks]
- [ ] Write spec freeze
- [x] Add ABNF grammar
- [ ] Ship 0.4.0
END CRUMB
