fixtures/invalid/missing-v.crumb
BEGIN CRUMB
kind=task
title=No version header
source=cli
---
[goal]
Header `v` missing.

[context]
- Parser MUST reject.

[constraints]
- Parser MUST reject.
END CRUMB
